# matlabdomain

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES copy.rst  CHANGES.rst  CITATION.bib  CITATION.cff  DEVELOPMENT.rst  LICENSE  README.rst  dev-requirements.txt  pyproject.toml  pytest.ini  readthedocs.yml  rtd-requirements.txt  setup.py  tox.ini  trace
.github/workflows/: pre-commit.yml  publish-to-test-pypi.yml  python-package.yml
docs/: CHANGES.rst  Makefile  conf.py  index.rst  make.bat
docs/src/: times_two.m  times_two_napoleon.m
sphinxcontrib/: __init__.py  documenters.py  generate_example_class.py  mat_autosummary.py  mat_directives.py  mat_documenters.py  mat_lexer.py  mat_parser.py  mat_textmate_parser.py  mat_tree_sitter_parser.py  mat_types.py  matlab.py  sphinx_matlab_apidoc.py  std.py  textmate_parser.py
sphinxcontrib/matlab/: __init__.py  _version.py  mat_documenters.py  mat_types.py  matlab.py
sphinxcontrib/template/: matbase.rst  matclass.rst  matmodule.rst
tests/: Makefile  conftest.py  helper.py  test_autodoc.py  test_autodoc_properties.py  test_autodoc_short_links.py  test_class_subfolder.py  test_classfolder.py  test_classfolder_class_name.py  test_doctests.py  test_duplicated_link.py  test_lexer.py  test_mat_lexer.py  test_mat_types.py  test_matlabify.py  test_module_class_names.py  test_no_matlab_src_dir.py  test_numad.py  test_package_links.py  test_package_prefix.py  test_parse_mfile.py  test_parse_mlappfile.py  test_parser.py  test_pymat.py  test_pymat_common_root.py  test_shortest_name.py  test_skipping_module_members.py  test_sphinx_matlab_apidoc.py
tests/roots/test_autodoc/: BaseClass.m  baseFunction.m  conf.py  contents.rst  index.rst  index_classfolder.rst  index_package.rst  index_root.rst  index_submodule.rst  index_target.rst
tests/roots/test_classfolder/: Makefile  conf.py  index.rst  index_first.rst  index_second.rst  index_third.rst  make.bat  readme.txt
tests/roots/test_classfolder/@First/: First.m
tests/roots/test_classfolder/@First/private/: method_in_folder.m
tests/roots/test_classfolder/src/+pkg/@Third/: Third.m  method_in_folder.m
tests/roots/test_classfolder/src/@Second/: Second.m
tests/roots/test_doctests/: conf.py  contents.rst
tests/roots/test_duplicate_link/: Makefile  base.rst  conf.py  groups.rst  index.rst
tests/roots/test_duplicate_link/_src/+replab/: Domain.m  FiniteGroup.m  Group.m  Monoid.m  NiceFiniteGroup.m
tests/roots/test_module_class_names/: YourClass.m  conf.py  index.rst  myclass.rst  readme.txt  yourclass.rst
tests/roots/test_module_class_names/Myclass/: Myclass.m
tests/roots/test_module_class_names/Myclass/MyOtherClass/: MyOtherClass.m
tests/roots/test_no_matlab_src_dir/: conf.py  index.rst  readme.txt
tests/roots/test_numad/: conf.py  index.rst  index_first.rst  index_second.rst  readme.txt
tests/roots/test_package_links/: Makefile  conf.py  contents.rst  make.bat
tests/roots/test_package_links/+replab/: Action.m  Str.m
tests/roots/test_package_prefix/: Makefile  conf.py  index.rst
tests/roots/test_package_prefix/+package/: func.m
tests/roots/test_package_prefix/+package/+subpkg/: func.m
tests/roots/test_pymat/: Makefile  conf.py  index.rst
tests/roots/test_pymat/matsrc/: func.m
tests/roots/test_pymat/pysrc/: func.py
tests/roots/test_pymat_common_root/: conf.py  index.rst
tests/roots/test_pymat_common_root/base/: MatlabClass.m  PythonClass.py
tests/roots/test_skipping_module_members/: conf.py  index.rst
tests/roots/test_skipping_module_members/src/: first.m  second.m
tests/test_data/: Application.mlapp  Bool.m  ClassAbstract.m  ClassBySource.m  ClassContainingParfor.m  ClassExample.m  ClassInheritHandle.m  ClassLongProperty.m  ClassWithAttributes.m  ClassWithBuiltinOverload.m  ClassWithBuiltinProperties.m  ClassWithCommentHeader.m  ClassWithDoubleQuotedString.m  ClassWithDummyArguments.m  ClassWithEllipsisProperties.m  ClassWithEndOfLineComment.m  ClassWithEnumMethod.m  ClassWithErrors.m  ClassWithEvent.m  ClassWithEventMethod.m  ClassWithFunctionArguments.m  ClassWithFunctionVariable.m  ClassWithGetMethod.m  ClassWithGetterSetter.m  ClassWithKeywordsAsFieldnames.m  ClassWithLineContinuation.m  ClassWithLongPropertyDocstrings.m  ClassWithLongPropertyTrailingEmptyDocstrings.m  ClassWithMethodAttributes.m  ClassWithMethodsWithSpaces.m  ClassWithNameMismatch.m  ClassWithPropertyAttributes.m  ClassWithPropertyCellValues.m  ClassWithPropertyValidators.m  ClassWithSeparatedComments.m  ClassWithSeperatedComments.m  ClassWithStringEllipsis.m  ClassWithStrings.m  ClassWithTests.m  ClassWithTrailingCommentAfterBases.m  (+35 more)
tests/test_data/+myPackage/: packageFunc.m
tests/test_data/+package/: package_func.m
tests/test_data/@ClassFolder/: ClassFolder.m  a_static_func.m  classMethod.m
tests/test_data/@ClassFolderUsingBuiltins/: ClassFolderUsingBuiltins.m
tests/test_data/@ClassFolderWithoutClassDefinition/: no_class.m
tests/test_data/@EmptyClassFolder/: readme.txt
tests/test_data/@NestedClassFolder/: NestedClassFolder.m  public_function.m
tests/test_data/@NestedClassFolder/folder1/: func.m
tests/test_data/@NestedClassFolder/private/: private_function.m
tests/test_data/@myClassFolder/: classMethod.m  myClassFolder.m  my_static_func.m
tests/test_data/submodule/: TestFibonacci.m  f_docstring_no_newline.m  f_ellipsis_after_equals.m  f_ellipsis_empty_output.m  f_ellipsis_in_comment.m  f_ellipsis_in_input.m  f_ellipsis_in_output.m  f_ellipsis_in_output_multiple.m  f_empty_output.m  f_no_docstring.m  f_no_input.m  f_no_input_parentheses.m  f_no_output.m  f_no_spaces.m  f_with_tabs.m
tests/test_data/test_submodule/: TestFibonacci.m  f_constant.m  f_ellipsis_after_equals.m  f_no_args.m  f_no_outputs.m  f_output_with_ellipsis.m  f_output_without_commas.m  f_with_comment_after_docstring.m  super_from_diff_mod.m
tests/test_docs/: Makefile  conf.py  index.rst  make.bat
tests/test_docs_automodule/: conf.py  index.rst
tests/test_docs_autosummary/: conf.py  index.rst
