[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Domain"
]
dependencies = [
    "Sphinx>=7.0.0",
    "tree-sitter-matlab>=1.0.2,<1.0.5",
    "tree-sitter>=0.21.3,<0.23.0",
    "setuptools"
]
description = 'Sphinx "matlabdomain" extension'
# Version from setuptools_scm
dynamic = ["version"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
maintainers = [{name = "Jørgen Cederberg", email = "jorgen@cederberg.be"}]
name = "sphinxcontrib-matlabdomain"
readme = "README.rst"
requires-python = ">=3.10"

[project.entry-points."sphinx.builders"]
matlab = "sphinxcontrib.matlab"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "defusedxml>=0.7.1",
    "sphinxcontrib-napoleon"
]
doc = [
    "sphinx_rtd_theme",
    "sphinxcontrib-napoleon"
]

[project.urls]
Documentation = "https://sphinxcontrib-matlabdomain.readthedocs.io"
Download = "http://pypi.python.org/pypi/sphinxcontrib-matlabdomain"
Homepage = "https://github.com/sphinx-contrib/matlabdomain"

[tool.codespell]
builtin = "clear,rare"
ignore-words = ".github/codespell_ignore_words.txt"
skip = "./.git"

[tool.coverage.run]
branch = true
omit = [
    '*/_build/*'
]

[tool.hatch.build.hooks.vcs]
version-file = "sphinxcontrib/matlab/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --show-capture=all --showlocals -s -vv"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
log_cli_level = "INFO"
xfail_strict = true

[tool.ruff]
include = [
    "tests/**/*.py",
    "sphinxcontrib/**/*.py",
    "doc/**/*.py"
]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "D203",
    "E203",
    "PERF203",
    "PERF401",
    "PERF403",
    "RUF001",
    "RUF012",
    "SIM102"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "C",
    "C4",
    "E9",
    "F63",
    "F7",
    "F82",
    "FLY",
    "I",
    "PERF",
    "RUF",
    "SIM",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 51
