[project]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Domain"
]
dependencies = [
    "Sphinx>=7.0.0",
    "tree-sitter-matlab>=1.0.2,<1.0.5",
    "tree-sitter>=0.21.3,<0.23.0",
    "setuptools"
]
description = 'Sphinx "matlabdomain" extension'
# Version from setuptools_scm
dynamic = ["version"]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
maintainers = [{name = "Jørgen Cederberg", email = "jorgen@cederberg.be"}]
name = "sphinxcontrib-matlabdomain"
readme = "README.rst"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "defusedxml>=0.7.1",
    "sphinxcontrib-napoleon"
]
doc = [
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon"
]

[project.urls]
Documentation = "https://sphinxcontrib-matlabdomain.readthedocs.io"
Download = "http://pypi.python.org/pypi/sphinxcontrib-matlabdomain"
Homepage = "https://github.com/sphinx-contrib/matlabdomain"

[tool.codespell]
builtin = "clear,rare"
ignore-words = ".github/codespell_ignore_words.txt"
skip = "./.git"

[tool.coverage.run]
branch = true
omit = [
    '*/_build/*'
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --show-capture=all --showlocals -s -vv"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
log_cli_level = "INFO"
xfail_strict = true

[tool.ruff]
include = [
    "tests/**/*.py",
    "sphinxcontrib/**/*.py",
    "doc/**/*.py"
]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "ARG",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D205",
    "E203",
    "E501",
    "PERF203",
    "PERF401",
    "PERF403",
    "PLR2004",
    "RUF001",
    "RUF012",
    "SIM102",
    "PTH"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "PERF",
    "PTH",
    "PLR",
    "RUF",
    "SIM",
    "UP",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 51

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D104"]

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 7
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 30
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 20
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 100
