[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=40.8.0", "setuptools_scm<6.0.0"]

[project]
authors = [
    {name = "Jørgen Cederberg", email = "jorgen@cederberg.be"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
    "Framework :: Sphinx :: Extension",
    "Framework :: Sphinx :: Domain"
]
dependencies = [
    "Sphinx>=7.0.0",
    "tree-sitter-matlab>=1.0.2,<1.0.5",
    "tree-sitter>=0.21.3,<0.23.0"
]
description = 'Sphinx "matlabdomain" extension'
dynamic = ["version"]
license = "BSD-3-Clause"
name = "sphinxcontrib-matlabdomain"
readme = "README.rst"
requires-python = ">=3.10.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "tox>4.8",
    "defusedxml>=0.7.1"
]
rtd = [
    "sphinx_rtd_theme",
    "sphinxcontrib-napoleon"
]

[project.urls]
Download = "http://pypi.python.org/pypi/sphinxcontrib-matlabdomain"
Homepage = "https://github.com/sphinx-contrib/matlabdomain"

[tool.codespell]
builtin = "clear,rare"
ignore-words = ".github/codespell_ignore_words.txt"
skip = "./.git"

[tool.coverage.run]
branch = true
omit = [
    '*/_build/*'
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers --show-capture=all --showlocals -s -vv"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
junit_family = "xunit2"
log_cli_level = "INFO"
minversion = "6.0"
xfail_strict = true

[tool.ruff]
include = [
    "tests/**/*.py",
    "sphinxcontrib/**/*.py",
    "doc/**/*.py"
]
indent-width = 4
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D205",
    "PLR2004",
    "RUF001",
    "RUF012",
    "SIM102",
    "PTH"
]
# List of all the ruff rules (includes why the rule matters)
# https://docs.astral.sh/ruff/rules/
select = [
    "ARG",
    "B",
    "C",
    "C4",
    "C90",
    "D",
    "E",
    "ERA",
    "F",
    "FLY",
    "FURB",
    "I",
    "PERF",
    "PTH",
    "PLR",
    "RUF",
    "SIM",
    "UP",
    "W"
]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 51

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "ARG002", "D104", "E203"]
"tests/test_autodoc.py" = ["E501"]
"tests/test_mat_types.py" = ["E501"]

[tool.ruff.lint.pylint]
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-args
max-args = 7
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-branches
max-branches = 30
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-returns
max-returns = 20
# https://docs.astral.sh/ruff/settings/#lint_pylint_max-statements
max-statements = 100

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    "README.rst",
    "LICENSE",
    "CHANGES.*"
]

[tool.setuptools.packages.find]
include = ["sphinxcontrib*"]

[tool.setuptools_scm]
